# tetgenpy

./: .buildinfo  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.html  CONTRIBUTING.md  README.md  api_reference.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  search.html  searchindex.js  setup.py  tetgenpy.html
.doctrees/: CONTRIBUTING.doctree  api_reference.doctree  environment.pickle  index.doctree  modules.doctree  python_api.doctree  tetgenpy.doctree
.doctrees/_generated/: tetgenpy.doctree  tetgenpy.gentet.doctree  tetgenpy.gentet.tetgen_exe.doctree  tetgenpy.gentet.tetrahedralize.doctree  tetgenpy.plc.PLC.add_facet_with_holes.doctree  tetgenpy.plc.PLC.add_facets.doctree  tetgenpy.plc.PLC.add_holes.doctree  tetgenpy.plc.PLC.add_points.doctree  tetgenpy.plc.PLC.add_regions.doctree  tetgenpy.plc.PLC.add_segment_constraints.doctree  tetgenpy.plc.PLC.doctree  tetgenpy.plc.PLC.show.doctree  tetgenpy.plc.PLC.sofarsogood.doctree  tetgenpy.plc.PLC.to_tetgenio.doctree  tetgenpy.plc.doctree  tetgenpy.tetgenpy_core.TetgenIO.doctree  tetgenpy.tetgenpy_core.TetgenIO.edge2tets.doctree  tetgenpy.tetgenpy_core.TetgenIO.edgemarkers.doctree  tetgenpy.tetgenpy_core.TetgenIO.edges.doctree  tetgenpy.tetgenpy_core.TetgenIO.face2edges.doctree  tetgenpy.tetgenpy_core.TetgenIO.face2tets.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_edge.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_elem.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_face.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_medit.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_mtr.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_node.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_off.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_ply.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_poly.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_stl.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_tet.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_var.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_vol.doctree  tetgenpy.tetgenpy_core.TetgenIO.load_vtk.doctree  tetgenpy.tetgenpy_core.TetgenIO.neighbors.doctree  tetgenpy.tetgenpy_core.TetgenIO.points.doctree  tetgenpy.tetgenpy_core.TetgenIO.save_edges.doctree  tetgenpy.tetgenpy_core.TetgenIO.save_elements.doctree  tetgenpy.tetgenpy_core.TetgenIO.save_faces.doctree  (+17 more)
.github/workflows/: build_and_test.yml  docs.yml  format.yml  main.yml
_generated/: tetgenpy.gentet.html  tetgenpy.gentet.tetgen_exe.html  tetgenpy.gentet.tetrahedralize.html  tetgenpy.html  tetgenpy.plc.PLC.add_facet_with_holes.html  tetgenpy.plc.PLC.add_facets.html  tetgenpy.plc.PLC.add_holes.html  tetgenpy.plc.PLC.add_points.html  tetgenpy.plc.PLC.add_regions.html  tetgenpy.plc.PLC.add_segment_constraints.html  tetgenpy.plc.PLC.html  tetgenpy.plc.PLC.show.html  tetgenpy.plc.PLC.sofarsogood.html  tetgenpy.plc.PLC.to_tetgenio.html  tetgenpy.plc.html  tetgenpy.tetgenpy_core.TetgenIO.edge2tets.html  tetgenpy.tetgenpy_core.TetgenIO.edgemarkers.html  tetgenpy.tetgenpy_core.TetgenIO.edges.html  tetgenpy.tetgenpy_core.TetgenIO.face2edges.html  tetgenpy.tetgenpy_core.TetgenIO.face2tets.html  tetgenpy.tetgenpy_core.TetgenIO.html  tetgenpy.tetgenpy_core.TetgenIO.load_edge.html  tetgenpy.tetgenpy_core.TetgenIO.load_elem.html  tetgenpy.tetgenpy_core.TetgenIO.load_face.html  tetgenpy.tetgenpy_core.TetgenIO.load_medit.html  tetgenpy.tetgenpy_core.TetgenIO.load_mtr.html  tetgenpy.tetgenpy_core.TetgenIO.load_node.html  tetgenpy.tetgenpy_core.TetgenIO.load_off.html  tetgenpy.tetgenpy_core.TetgenIO.load_ply.html  tetgenpy.tetgenpy_core.TetgenIO.load_poly.html  tetgenpy.tetgenpy_core.TetgenIO.load_stl.html  tetgenpy.tetgenpy_core.TetgenIO.load_tet.html  tetgenpy.tetgenpy_core.TetgenIO.load_var.html  tetgenpy.tetgenpy_core.TetgenIO.load_vol.html  tetgenpy.tetgenpy_core.TetgenIO.load_vtk.html  tetgenpy.tetgenpy_core.TetgenIO.neighbors.html  tetgenpy.tetgenpy_core.TetgenIO.points.html  tetgenpy.tetgenpy_core.TetgenIO.save_edges.html  tetgenpy.tetgenpy_core.TetgenIO.save_elements.html  tetgenpy.tetgenpy_core.TetgenIO.save_faces.html  (+17 more)
_modules/: index.html
_modules/tetgenpy/: gentet.html  plc.html
_sources/: index.rst.txt  modules.rst.txt  tetgenpy.rst.txt
_sources/_generated/: tetgenpy.gentet.rst.txt  tetgenpy.gentet.tetgen_exe.rst.txt  tetgenpy.gentet.tetrahedralize.rst.txt  tetgenpy.plc.PLC.add_facet_with_holes.rst.txt  tetgenpy.plc.PLC.add_facets.rst.txt  tetgenpy.plc.PLC.add_holes.rst.txt  tetgenpy.plc.PLC.add_points.rst.txt  tetgenpy.plc.PLC.add_regions.rst.txt  tetgenpy.plc.PLC.add_segment_constraints.rst.txt  tetgenpy.plc.PLC.rst.txt  tetgenpy.plc.PLC.show.rst.txt  tetgenpy.plc.PLC.sofarsogood.rst.txt  tetgenpy.plc.PLC.to_tetgenio.rst.txt  tetgenpy.plc.rst.txt  tetgenpy.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.edge2tets.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.edgemarkers.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.edges.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.face2edges.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.face2tets.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_edge.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_elem.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_face.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_medit.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_mtr.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_node.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_off.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_ply.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_poly.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_stl.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_tet.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_var.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_vol.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.load_vtk.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.neighbors.rst.txt  tetgenpy.tetgenpy_core.TetgenIO.rst.txt  (+21 more)
cpp/tetgenpy/: CMakeLists.txt  print.hpp  py_tetgenio.hpp  py_tetrahedralize.hpp  tetgenpy_core.cpp
cpp/tetgenpy/init/: py_tetgenio.cpp  py_tetrahedralize.cpp
examples/: plc_to_tets.py
tests/: test_tetgenpy.py
tetgenpy/: __init__.py  gentet.py  plc.py  tetrahedralize.py
(+4 files in other folders)
