[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.16",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_tetgenpy.py"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = ["*arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
skip = "pp*"
